Applied isort and black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,19 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=8.0.0"]
+dev = [
+    "pytest>=8.0.0",
+    "black>=22.0.0",
+    "isort>=5.0.0",
+    "toml>=0.10.2",  # Required for isort to read pyproject.toml
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.black]
+line-length = 88
+target-version = ['py39']
+
+[tool.isort]
+profile = "black"
