Add pyre type checking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,15 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=8.0.0"]
+dev = [
+    "pytest>=8.0.0",
+    "pyre-check",
+    # Type stubs for third-party libraries
+    "pandas-stubs",
+    "types-setuptools",
+    "types-requests",
+    "data-science-types",  # Provides stubs for numpy, pandas, matplotlib
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
