--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Production-ready multicalibration for machine learning"
 requires-python = ">=3.10"
 readme = "README.md"
 dependencies = [
-    "numpy>=1.20.0,<2.0.0",  # Pin to 1.x for ax-platform 0.3.x compatibility
+    "numpy>=1.20.0",
     "pandas>=1.3.0",
     "scipy>=1.7.0",
     "scikit-learn>=1.0.0",
@@ -19,7 +19,7 @@ dependencies = [
     "pyarrow>=10.0.0",
     "matplotlib>=3.3.0",
     "cffi>=1.15.0",
-    "ax-platform>=0.3.0",
+    "ax-platform>=1.1.2,<1.2.0",  # Version 1.2.0 has behavioral changes that affects our tests
 ]
 
 [project.optional-dependencies]
