--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,3 +36,29 @@ jobs:
     - name: Run pytest
       run: |
         pytest tests/ -v
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: website/package-lock.json
+
+    - name: Install dependencies
+      working-directory: ./website
+      run: npm ci
+
+    - name: Build website
+      working-directory: ./website
+      run: npm run build
+
+    - name: Upload documentation artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: documentation
+        path: website/build/
