--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 
 # Distribution / packaging
 *.egg-info/
+
+# Node modules
+node_modules/
+
+# Docusaurus build
+website/build/
+website/.docusaurus/
+website/node_modules/
