--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -77,3 +77,38 @@ jobs:
       with:
         name: documentation
         path: website/build/
+
+  sphinx:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Cache pip packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-sphinx-${{ hashFiles('sphinx/requirements.txt', 'pyproject.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-sphinx-
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .
+        pip install -r sphinx/requirements.txt
+
+    - name: Build Sphinx documentation
+      working-directory: ./sphinx
+      run: |
+        sphinx-build -b html source build/html
+
+    - name: Upload Sphinx documentation
+      uses: actions/upload-artifact@v4
+      with:
+        name: sphinx-documentation
+        path: sphinx/build/html/
