--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ website/build/
 website/.docusaurus/
 website/node_modules/
 
+# Sphinx build and artifacts
+sphinx/build/
+sphinx/source/_build/
+*.doctrees
+.buildinfo
+
 # Test coverage
 htmlcov/
 .coverage
